# McApp

./: .gitignore  BUG_REPORT_KEEPALIVE.md  C2-mc-ws.py  CLAUDE.md  LICENSE  PHASE3_REMOTE_IMPLEMENTATION.md  README.md  VERIFICATION_INDEX.md  ble-remotehead.md  ble_handler.py  codereview-20260417.md  codereview-20260419.md  command_handler.py  config.sample.json  cp_all  daily_sqlite_dumper.py  deploy-to-pi.sh  install_caddy.sh  mcproxy.service  message_storage.py  orb-testing.md  pyproject.toml  release.sh  requirements.txt  rules.py  seed.py  sperrliste.json  ssl-tunnel-setup.sh  stat  supervisor.py  template.py  types.py  update-needs.txt  websocket_handler.py
.old/: pi-harden.sh
ble_service/: README.md  mcapp-ble.service  mcproxy-ble.service  pyproject.toml
ble_service/src/: __init__.py  ble_adapter.py  main.py
bootstrap/: DEPLOYMENT_LOGGING.md  README.md  mcapp.sh  mcproxy.sh  requirements.txt  sd-card.sh
bootstrap/lib/: config.sh  deploy.sh  detect.sh  health.sh  packages.sh  system.sh
bootstrap/templates/: Caddyfile.tmpl  config.json.tmpl  journald.conf  lighttpd.conf  mcapp-ble.service  mcapp-update.path  mcapp-update.service  mcapp.service  mcproxy-ble.service  mcproxy.service  nftables.conf  unblock-bluetooth.service
bootstrap/templates/caddy/: Caddyfile.cloudflare.tmpl  Caddyfile.desec.tmpl  Caddyfile.duckdns.tmpl  caddy.service
bootstrap/templates/cloudflared/: cloudflared.service  config.yml.tmpl
doc/: 2026-01-25_1400-bootstrap-rewrite-ADR.md  2026-02-10_1200-tls-remote-access-ADR.md  2026-02-11_1400-position-signal-architecture-ADR.md  2026-02-12_open_impl.md  2026-02-14_1500-altitude-normalization-ADR.md  2026-02-21_telemetrie-analyse.md  2026-03-14_sqlite-performance-analyse.md  BUG_REPORT_BLE_REMOTE.md  MeshCom-ACK.md  PHASE4_VERIFICATION.md  SSE-FastAPI.md  VERIFICATION_REPORT_PHASE1_PHASE2.md  VERIFICATION_SUMMARY.txt  WebIF-alternative.md  a0-commands.md  architecture-reference.md  ble-challenges.md  ble-pin.md  ble-remotehead.md  ble-state-machine.md  charts-wrong.md  check-and-remove-outbound-shadow.md  check-and-remove-shadowrouting.md  code-audit.md  command-if.md  daily-check-chore.md  database-reference.md  dataflow.md  deployment_testing.md  high-hop-forensics-SOP.md  messages-mehr-als-4-hops.md  neue-firmware.md  new-bootstrap.md  operations-reference.md  phase1-fixes-summary.md  phase2-summary.md  release-history.md  release_sh.md  remote-flash.md  send-ack.md  (+9 more)
logs/: 2026-01-25-tasks.md
scripts/: deploy-to-pi.sh  release.sh  update-runner.py
src/mcapp/: __init__.py  ble_client.py  ble_client_disabled.py  ble_client_local.py  ble_client_remote.py  ble_handler.py  ble_protocol.py  config_loader.py  logging_setup.py  main.py  message_storage.py  meteo.py  migrate_storage.py  outbound.py  schemas.py  sqlite_storage.py  sse_handler.py  suppression.py  udp_handler.py  websocket_handler.py
src/mcapp/classifier/: __init__.py  classify.py  rules.py  score.py  seed.py  template.py  tests.py  types.py
src/mcapp/commands/: __init__.py  _base.py  admin_commands.py  ctcping.py  data_commands.py  decode.py  dedup.py  handler.py  parsing.py  response.py  routing.py  shadow.py  simple_commands.py  tests.py  topic_beacon.py  weather_command.py
src/mcproxy/: __init__.py  ble_client.py  ble_client_disabled.py  ble_client_local.py  ble_client_remote.py  ble_handler.py  command_handler.py  config_loader.py  logging_setup.py  main.py  message_storage.py  meteo.py  migrate_storage.py  sqlite_storage.py  sse_handler.py  udp_handler.py  websocket_handler.py
src/mcproxy/commands/: __init__.py  constants.py  ctcping.py  (+7 more)
