[project]
name = "mcproxy"
version = "0.51.0"
requires-python = ">=3.13"
dependencies = [
    "websockets>=14.0",
    "dbus-next>=0.2.3",
    "timezonefinder>=6.5.0",
    "httpx>=0.28.0",
    "aiohttp>=3.9.0",
    "aiohttp-sse-client>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
mcproxy = "mcproxy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
