[project]
name = "mcapp"
version = "1.4.0"
requires-python = ">=3.11"
dependencies = [
    # "dbus-next>=0.2.3",  # REMOVED: Only needed by ble_service
    "timezonefinder>=6.5.0",
    "aiohttp>=3.9.0",
    "aiohttp-sse-client>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
mcapp = "mcapp.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["ble_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
