[project]
name = "mcapp"
version = "1.6.14"
requires-python = ">=3.11"
dependencies = [
    "timezonefinder>=6.5.0",
    "httpx>=0.27",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.0",
    "sse-starlette>=3.4.4",
]

[project.scripts]
mcapp = "mcapp.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["ble_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
